src/objects/Market_Kasese__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>3.0 Market Kasese</relationshipLabel>
        <relationshipName>X3_0_Market_Kasese1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_of_capture__c</fullName>
        <label>Date of capture</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GPS_Location__c</fullName>
        <label>GPS Location</label>
        <required>true</required>
        <scale>7</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Market_Name__c</fullName>
        <formula>X3_0_Market__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_Of_Times_Qtn_Repeats__c</fullName>
        <label>Number Of Times Qtn Repeats</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X3_0_Market__c</fullName>
        <label>3.0 Market</label>
        <referenceTo>C3P0_Market__c</referenceTo>
        <relationshipLabel>3.0 Market Kasese</relationshipLabel>
        <relationshipName>X3_0_Market_Kasese1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>list_of_products_to_attain_prices_from__c</fullName>
        <label>list of products to attain prices from</label>
        <picklist>
            <picklistValues>
                <fullName>Maize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Robuta Coffee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Soybeans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K132 Beans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dry Nambale Beans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gnuts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banana</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>3.0 Market Kasese</label>
    <nameField>
        <displayFormat>MK-{0000}</displayFormat>
        <label>3.0 Market Kasese Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>3.0 Market Kasese</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>